Use assembleruntime.sh